--- a/index.html
+++ b/index.html
@@ -7,21 +7,76 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   
   <title>Frontend Mentor | Single-page design portfolio</title>
+
+  <link rel="stylesheet" href="/styles/reset.css">
+  <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
+  <header>
+    <div class="wrapper">
+      <div class="header">
+        <a href="#" class="logo">
+          <img src="./assets/logo.svg" alt="Logo" class="pic">
+        </a>
+        <div class="button">
+          <a href="#" class="btn_a">Free Consultation</a>
+        </div>
+      </div>
+    </div>
+  </header>
 
-  Free Consultation
+  <main>
+    <div class="wrapper">
+      <div class="caption">
+        <h1 class="title">
+          Design solutions made easy
+        </h1>
+        <h3 class="description">
+          With over ten years of experience in various design disciplines, I’m your one-stop shop for your design needs.
+        </h3>
+      </div>
 
-  Design solutions made easy
+      <div class="cards">
+        <div class="graphic_design card">
+          <img src="./assets/pattern-graphic-design.svg" alt="graphic_design" class="thumb">
+          <p class="subscription">Graphic Design</p>
+        </div>
+        <div class="ui_ux card">
+          <img src="./assets/pattern-ui-ux.svg" alt="ui_ux" class="thumb">
+          <p class="subscription">UI/UX</p>
+        </div>
+        <div class="apps card">
+          <img src="./assets/pattern-apps.svg" alt="apps" class="thumb">
+          <p class="subscription">Apps</p>
+        </div>
+        <div class="photography card">
+          <img src="./assets/pattern-photography.svg" alt="photography" class="thumb">
+          <p class="subscription">Photography</p>
+        </div>
+        <div class="illustrations card">
+          <img src="./assets/pattern-illustrations.svg" alt="illustrations" class="thumb">
+          <p class="subscription">Illustrations</p>
+        </div>
+        <div class="motion_graphics card">
+          <img src="./assets/pattern-motion-graphics.svg" alt="motion_graphics" class="thumb">
+          <p class="subscription">Motion Graphics</p>
+        </div>
+      </div>
+      
+    </div>
+  </main>
+  <footer>
+    <div class="wrapper">
 
-  With over ten years of experience in various design disciplines, I’m your one-stop shop for your design needs.
+    </div>
+  </footer>
 
-  Graphic Design
-  UI/UX
-  Apps
-  Photography
-  Illustrations
-  Motion Graphics
+  
+  
+  
+  
+  
+  
 
   I’m Amy, and I’d love to work on your next project
 
