--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   
   <title>Frontend Mentor | Single-page design portfolio</title>
 
-  <link rel="stylesheet" href="/styles/reset.css">
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="../styles/reset.css">
+  <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
   <header>
