--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <main>
     <div class="wrapper">
       <div class="caption">
-        <h1 class="title">
+        <h1 class="h1_title">
           Design solutions made easy
         </h1>
         <h3 class="description">
@@ -62,39 +62,78 @@
           <p class="subscription">Motion Graphics</p>
         </div>
       </div>
+
+      <div class="about">
+        <div class="photo">
+          <img src="./assets/image-amy.webp" alt="photo_Amy" class="photo_amy">
+        </div>
+        <div class="about_text">
+          <h2 class="title_about">
+            I’m Amy, and I’d love to work on your next project
+          </h2>
+          <h3 class="description_about">
+            I love working with others to create beautiful design solutions. I’ve designed everything from brand illustrations 
+            to complete mobile apps. I’m also handy with a camera!
+          </h3>
+          <a href="#" class="btn_a btn_orange">
+            Free Consultation
+          </a>
+        </div>
+      </div>
+
+      <div class="slider">
+        <div class="title_slider">My Work</div>
+        <div class="slides">
+          <div class="slide">
+            <img src="/assets/image-slide-1.jpg" alt="slide1">
+          </div>
+          <div class="slide">
+            <img src="/assets/image-slide-2.jpg" alt="slide2">
+          </div>
+          <div class="slide">
+            <img src="/assets/image-slide-3.jpg" alt="slide3">
+          </div>
+          <div class="slide">
+            <img src="/assets/image-slide-4.jpg" alt="slide4">
+          </div>
+          <div class="slide">
+            <img src="/assets/image-slide-5.jpg" alt="slide5">
+          </div>
+        </div>
+        <div class="arrows">
+          <div class="btn_left"></div>
+          <div class="btn_right"></div>
+        </div>
+      </div>
+
+      <div class="call">
+        <div class="call_text">
+          <h2 class="call_title">
+            Book a call with me
+          </h2>
+          <h3 class="call_description">
+            I’d love to have a chat to see how I can help you. The best first step is for us to discuss your project during a 
+            free consultation. Then we can move forward from there.
+          </h3>
+        </div>
+        <a href="#" class="btn_a btn_orange">
+          Free Consultation
+        </a>
+      </div>
       
     </div>
   </main>
   <footer>
     <div class="wrapper">
-
+      <div class="footer">
+        <a href="#" class="logo">
+          <img src="./assets/logo.svg" alt="Logo" class="pic">
+        </a>
+        <div class="button">
+          <a href="#" class="btn_a">Free Consultation</a>
+        </div>
+      </div>
     </div>
   </footer>
-
-  
-  
-  
-  
-  
-  
-
-  I’m Amy, and I’d love to work on your next project
-
-  I love working with others to create beautiful design solutions. I’ve designed everything from brand illustrations 
-  to complete mobile apps. I’m also handy with a camera!
-
-  Free Consultation
-
-  My Work
-
-  Book a call with me
-
-  I’d love to have a chat to see how I can help you. The best first step is for us to discuss your project during a 
-  free consultation. Then we can move forward from there.
-
-  Free Consultation
-
-  Free Consultation
-
 </body>
 </html>
