--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
         <div class="title_slider">My Work</div>
         <div class="slides">
           <div class="slide">
-            <img src="/assets/image-slide-1.jpg" alt="slide1">
+            <img src="./assets/image-slide-1.jpg" alt="slide1">
           </div>
           <div class="slide">
-            <img src="/assets/image-slide-2.jpg" alt="slide2">
+            <img src="./assets/image-slide-2.jpg" alt="slide2">
           </div>
           <div class="slide">
-            <img src="/assets/image-slide-3.jpg" alt="slide3">
+            <img src="./assets/image-slide-3.jpg" alt="slide3">
           </div>
           <div class="slide">
-            <img src="/assets/image-slide-4.jpg" alt="slide4">
+            <img src="./assets/image-slide-4.jpg" alt="slide4">
           </div>
           <div class="slide">
-            <img src="/assets/image-slide-5.jpg" alt="slide5">
+            <img src="./assets/image-slide-5.jpg" alt="slide5">
           </div>
         </div>
         <div class="arrows">
