--- a/index.html
+++ b/index.html
@@ -84,25 +84,27 @@
       <div class="slider">
         <div class="title_slider">My Work</div>
         <div class="slides">
-          <div class="slide">
-            <img src="./assets/image-slide-1.jpg" alt="slide1">
-          </div>
-          <div class="slide">
-            <img src="./assets/image-slide-2.jpg" alt="slide2">
-          </div>
-          <div class="slide">
-            <img src="./assets/image-slide-3.jpg" alt="slide3">
-          </div>
-          <div class="slide">
-            <img src="./assets/image-slide-4.jpg" alt="slide4">
-          </div>
-          <div class="slide">
-            <img src="./assets/image-slide-5.jpg" alt="slide5">
+          <div class="slider_wrapper">
+            <div class="slide">
+              <img src="./assets/image-slide-1.jpg" alt="slide1">
+            </div>
+            <div class="slide">
+              <img src="./assets/image-slide-2.jpg" alt="slide2">
+            </div>
+            <div class="slide">
+              <img src="./assets/image-slide-3.jpg" alt="slide3">
+            </div>
+            <div class="slide">
+              <img src="./assets/image-slide-4.jpg" alt="slide4">
+            </div>
+            <div class="slide">
+              <img src="./assets/image-slide-5.jpg" alt="slide5">
+            </div>
           </div>
         </div>
         <div class="arrows">
-          <div class="btn_left"></div>
-          <div class="btn_right"></div>
+          <button class="btn_left"></button>
+          <button class="btn_right"></button>
         </div>
       </div>
 
