--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
   <link rel="stylesheet" href=".//styles/reset.css">
   <link rel="stylesheet" href=".//styles/style.css">
+
+  <link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
+<link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
 </head>
 <body>
   <header>
@@ -81,23 +84,23 @@
         </div>
       </div>
 
-      <div class="slider">
+      <div class="slides">
         <div class="title_slider">My Work</div>
         <div class="slider_wrapper">
-          <div class="slides">
-            <div class="slide">
+          <div class="slider single">
+            <div class="slider-item">
               <img src="./assets/image-slide-1.jpg" alt="slide1">
             </div>
-            <div class="slide">
+            <div class="slider-item">
               <img src="./assets/image-slide-2.jpg" alt="slide2">
             </div>
-            <div class="slide">
+            <div class="slider-item">
               <img src="./assets/image-slide-3.jpg" alt="slide3">
             </div>
-            <div class="slide">
+            <div class="slider-item">
               <img src="./assets/image-slide-4.jpg" alt="slide4">
             </div>
-            <div class="slide">
+            <div class="slider-item">
               <img src="./assets/image-slide-5.jpg" alt="slide5">
             </div>
           </div>
@@ -137,5 +140,10 @@
       </div>
     </div>
   </footer>
+  
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="./slick/slick.min.js"></script>
+				
 </body>
 </html>
