--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 
   <link rel="stylesheet" href=".//styles/reset.css">
   <link rel="stylesheet" href=".//styles/style.css">
+  <link rel="stylesheet" href="/styles/slick-style.css">
 
-  <link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
-<link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
+  <link rel="stylesheet" type="text/css" href="/slick-1.8.1/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="/slick-1.8.1/slick/slick-theme.css"/>
 </head>
 <body>
   <header>
@@ -87,25 +88,25 @@
       <div class="slides">
         <div class="title_slider">My Work</div>
         <div class="slider_wrapper">
-          <div class="slider single">
-            <div class="slider-item">
+          <div class="slider">
+            <div class="slide">
               <img src="./assets/image-slide-1.jpg" alt="slide1">
             </div>
-            <div class="slider-item">
+            <div class="slide">
               <img src="./assets/image-slide-2.jpg" alt="slide2">
             </div>
-            <div class="slider-item">
+            <div class="slide">
               <img src="./assets/image-slide-3.jpg" alt="slide3">
             </div>
-            <div class="slider-item">
+            <div class="slide">
               <img src="./assets/image-slide-4.jpg" alt="slide4">
             </div>
-            <div class="slider-item">
+            <div class="slide">
               <img src="./assets/image-slide-5.jpg" alt="slide5">
             </div>
           </div>
         </div>
-        <div class="arrows">
+        <div class="slick-arrow">
           <button class="btn_left"></button>
           <button class="btn_right"></button>
         </div>
@@ -143,7 +144,8 @@
   
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src="./slick/slick.min.js"></script>
+  <script type="text/javascript" src="/slick-1.8.1/slick/slick.min.js"></script>
+  <script src="/js/slider.js"></script>
 				
 </body>
 </html>
