--- a/index.html
+++ b/index.html
@@ -87,26 +87,24 @@
 
       <div class="slides">
         <div class="title_slider">My Work</div>
-        <div class="slider_wrapper">
-          <div class="slider">
-            <div class="slide">
-              <img src="./assets/image-slide-1.jpg" alt="slide1">
-            </div>
-            <div class="slide">
-              <img src="./assets/image-slide-2.jpg" alt="slide2">
-            </div>
-            <div class="slide">
-              <img src="./assets/image-slide-3.jpg" alt="slide3">
-            </div>
-            <div class="slide">
-              <img src="./assets/image-slide-4.jpg" alt="slide4">
-            </div>
-            <div class="slide">
-              <img src="./assets/image-slide-5.jpg" alt="slide5">
-            </div>
+        <div class="slider">
+          <div class="slide">
+            <img src="./assets/image-slide-1.jpg" alt="slide1">
+          </div>
+          <div class="slide">
+            <img src="./assets/image-slide-2.jpg" alt="slide2">
+          </div>
+          <div class="slide">
+            <img src="./assets/image-slide-3.jpg" alt="slide3">
+          </div>
+          <div class="slide">
+            <img src="./assets/image-slide-4.jpg" alt="slide4">
+          </div>
+          <div class="slide">
+            <img src="./assets/image-slide-5.jpg" alt="slide5">
           </div>
         </div>
-        <div class="slick-arrow">
+        <div class="arrows">
           <button class="btn_left"></button>
           <button class="btn_right"></button>
         </div>
