--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
   <link rel="stylesheet" href=".//styles/reset.css">
   <link rel="stylesheet" href=".//styles/style.css">
-  <link rel="stylesheet" href="/styles/slick-style.css">
+  <link rel="stylesheet" href=".//styles/slick-style.css">
 
-  <link rel="stylesheet" type="text/css" href="/slick-1.8.1/slick/slick.css"/>
-  <link rel="stylesheet" type="text/css" href="/slick-1.8.1/slick/slick-theme.css"/>
+  <link rel="stylesheet" type="text/css" href=".//slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href=".//slick/slick-theme.css"/>
 </head>
 <body>
   <header>
@@ -142,8 +142,8 @@
   
   <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src="/slick-1.8.1/slick/slick.min.js"></script>
-  <script src="/js/slider.js"></script>
+  <script type="text/javascript" src=".//slick/slick.min.js"></script>
+  <script src=".//js/slider.js"></script>
 				
 </body>
 </html>
