--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
   <header>
     <div class="wrapper">
       <div class="header">
-        <a href="#" class="logo">
+        <a href="#!" class="logo">
           <img src="./assets/logo.svg" alt="Logo" class="pic">
         </a>
         <div class="button">
-          <a href="#" class="btn_a">Free Consultation</a>
+          <a href="#!" class="btn_a">Free Consultation</a>
         </div>
       </div>
     </div>
@@ -79,7 +79,7 @@
             I love working with others to create beautiful design solutions. I’ve designed everything from brand illustrations 
             to complete mobile apps. I’m also handy with a camera!
           </h3>
-          <a href="#" class="btn_a btn_orange">
+          <a href="#!" class="btn_a btn_orange">
             Free Consultation
           </a>
         </div>
@@ -120,7 +120,7 @@
             free consultation. Then we can move forward from there.
           </h3>
         </div>
-        <a href="#" class="btn_a btn_orange">
+        <a href="#!" class="btn_a btn_orange">
           Free Consultation
         </a>
       </div>
@@ -130,11 +130,11 @@
   <footer>
     <div class="wrapper">
       <div class="footer">
-        <a href="#" class="logo">
+        <a href="#!" class="logo">
           <img src="./assets/logo.svg" alt="Logo" class="pic">
         </a>
         <div class="button">
-          <a href="#" class="btn_a">Free Consultation</a>
+          <a href="#!" class="btn_a">Free Consultation</a>
         </div>
       </div>
     </div>
