--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
     </div>
   </footer>
   
-  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src=".//slick/slick.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script src=".//slick/slick.min.js"></script>
   <script src=".//js/slider.js"></script>
 				
 </body>
